--- a/inovi.css
+++ b/inovi.css
@@ -1,7 +1,14 @@
+body {
+  background-color: #f0f0f0;
+}
+
 h1 {
+  background-color: #ffa500;
+  color: #ffffff;
   text-align: center;
 }
 
 p {
+  color: #3c3c3c;
   text-align: left;
 }
