--- a/inovi.css
+++ b/inovi.css
@@ -3,19 +3,19 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed; */
-  background-color: #f0f0f0;
+  background-color: #fffeed;
 }
 
 h1 {
-  background-color: #ffa500;
-  color: #ffffff;
+  background-color: #d95050;
+  color: #fffeed;
   text-align: center;
 }
 
 p {
   font-family: "MONOFUR", "MS Gothic", Gothic, sans-serif;
   font-size: 12px;
-  color: #3c3c3c;
+  color: #222222;
   text-align: left;
 }
 
