--- a/inovi.css
+++ b/inovi.css
@@ -3,7 +3,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed; */
-  background-color: #fffeed;
+  background-color: #171717;
 }
 
 img {
@@ -13,7 +13,7 @@ img {
 }
 
 h1 {
-  background-color: #d95050;
+  background-color: #e3d598;
   color: #fffeed;
   text-align: center;
 }
@@ -35,9 +35,59 @@ code {
   font-style: italic;
 }
 
-bgmask {
-  -webkit-mask-image:url(maskimg.png);
-  -webkit-mask-position:center;
-  -webkit-mask-repeat:no-repeat;
-  -webkit-mask-size:auto auto;
+.bgmask {
+  -webkit-mask-image: url(maskimg.png); mask-image: url(maskimg.png);
+  -webkit-mask-position: center center; mask-position: center center;
+  -webkit-mask-repeat: no-repeat; mask-repeat: no-repeat;
+  -webkit-mask-size: auto auto; mask-size: auto auto;
 }
+
+.lines {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  margin: auto;
+  width: 90vw;
+  -webkit-transform: skew(-60deg); transform: skew(-60deg);
+}
+
+.line {
+  position: absolute;
+  width: 1px;
+  height: 100%;
+  top: 0;
+  left: 50%;
+  background: rgba(255, 255, 255, 0.1);
+  overflow: hidden;
+}
+
+.line::after {
+    content: '';
+    display: block;
+    position: absolute;
+    height: 15vh;
+    width: 100%;
+    top: -50%;
+    left: 0;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #ffffff 75%, #ffffff 100%);
+    animation: drop 7s 0s infinite;
+    animation-fill-mode: forwards;
+    animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
+}
+
+.line:nth-child(1) {
+  margin-left: -25%; }
+  .line:nth-child(1)::after {
+    animation-delay: 2s; }
+.line:nth-child(3) {
+  margin-left: 25%; }
+  .line:nth-child(3)::after {
+    animation-delay: 2.5s; }
+
+@keyframes drop {
+  0% { top: -50%; }
+  100% { top: 110%; }
+}
+
