--- a/inovi.css
+++ b/inovi.css
@@ -63,7 +63,12 @@ code {
   height: 100%;
   margin: auto;
   width: 90vw;
-  -webkit-transform: skew(-75deg); transform: skew(-60deg);
+  -webkit-transform: skew(-75deg); transform: skew(-75deg);
+  
+  -webkit-mask-image: url(maskimg.png); mask-image: url(maskimg.png);
+  -webkit-mask-position: center center; mask-position: center center;
+  -webkit-mask-repeat: no-repeat; mask-repeat: no-repeat;
+  -webkit-mask-size: auto auto; mask-size: auto auto;
 }
 
 .line {
@@ -72,7 +77,7 @@ code {
   height: 100%;
   top: 0;
   left: 50%;
-  background: rgba(255, 255, 255, 0);
+  background: rgba(255, 255, 255, 0.1);
   overflow: hidden;
 }
 
@@ -84,18 +89,18 @@ code {
     width: 100%;
     top: -50%;
     left: 0;
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.1) 0%, #ffffff 75%, #ffffff 100%);
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #ffffff 75%, #ffffff 100%);
     animation: drop 7s 0s infinite;
     animation-fill-mode: forwards;
     animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
 }
 
 .line:nth-child(1) {
-  margin-left: -25%; }
+  margin-left: -10%; }
   .line:nth-child(1)::after {
     animation-delay: 2s; }
 .line:nth-child(3) {
-  margin-left: 25%; }
+  margin-left: 10%; }
   .line:nth-child(3)::after {
     animation-delay: 2.5s; }
 
