--- a/inovi.css
+++ b/inovi.css
@@ -4,19 +4,28 @@
   box-sizing: border-box !important;
 }
 
+html, body {
+  height: 100%; }
+
 body {
   /* background-image: url("defaultbg.png");
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed; */
   background-color: #171717;
+  /* background-size:400%, 400%; */
   display: table;
   width: 100%;
   height: 100%;
   color: #000;
   line-height: 1.6;
   position: relative;
+  background: radial-gradient(ellipse at center, #1B2735 0%, #090A0F 100%); /* #2b3847 */
   overflow: hidden;
+  -webkit-mask-image: url(http://inovi.link/maskimg.png); mask-image: url(http://inovi.link/maskimg.png);
+  -webkit-mask-position: center center; mask-position: center center;
+  -webkit-mask-repeat: no-repeat; mask-repeat: no-repeat;
+  -webkit-mask-size: auto auto; mask-size: auto auto;
 }
 
 img {
@@ -49,11 +58,21 @@ code {
 }
 
 .bgmask {
-  -webkit-mask-image: url(maskimg.png); mask-image: url(maskimg.png);
+  -webkit-mask-image: url(http://inovi.link/maskimg.png); mask-image: url(http://inovi.link/maskimg.png);
   -webkit-mask-position: center center; mask-position: center center;
   -webkit-mask-repeat: no-repeat; mask-repeat: no-repeat;
   -webkit-mask-size: auto auto; mask-size: auto auto;
 }
+
+.sunset {
+    width: 100vw;
+    height: 100vh;
+    background-image: linear-gradient(180deg, #040017, #3a054d, #ffa600);
+    /* background-size: 400%, 400%; */
+    position: center, center;
+    overflow: hidden;
+}
+
 
 .lines {
   position: absolute;
@@ -63,12 +82,7 @@ code {
   height: 100%;
   margin: auto;
   width: 90vw;
-  -webkit-transform: skew(-75deg); transform: skew(-75deg);
-  
-  -webkit-mask-image: url(maskimg.png); mask-image: url(maskimg.png);
-  -webkit-mask-position: center center; mask-position: center center;
-  -webkit-mask-repeat: no-repeat; mask-repeat: no-repeat;
-  -webkit-mask-size: auto auto; mask-size: auto auto;
+  -webkit-transform: skew(-70deg); transform: skew(-70deg);
 }
 
 .line {
@@ -77,7 +91,7 @@ code {
   height: 100%;
   top: 0;
   left: 50%;
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(255, 255, 255, 0);
   overflow: hidden;
 }
 
@@ -96,11 +110,11 @@ code {
 }
 
 .line:nth-child(1) {
-  margin-left: -10%; }
+  margin-left: -25%; }
   .line:nth-child(1)::after {
     animation-delay: 2s; }
 .line:nth-child(3) {
-  margin-left: 10%; }
+  margin-left: 25%; }
   .line:nth-child(3)::after {
     animation-delay: 2.5s; }
 
