--- a/inovi.css
+++ b/inovi.css
@@ -1,3 +1,12 @@
+@viewport {
+  width: device-width;
+  zoom: 1.0;
+}
+
+@-ms-viewport {
+  width: device-width;
+}
+
 * {
   margin: 0;
   padding: 0;
